[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/DebugDraw.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Debug" type="CanvasLayer" parent="."]
layer = 8

[node name="DebugCanvas" type="Control" parent="Debug"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="DebugLabel" type="Label" parent="Debug"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 420.0
margin_bottom = 270.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "DEBUG"

[node name="HUD" type="CanvasLayer" parent="."]
visible = false

[node name="Action0" type="Button" parent="HUD"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -464.0
margin_top = 64.0
margin_right = -364.0
margin_bottom = 84.0
rect_scale = Vector2( 4, 4 )
text = "Bomb square"

[node name="Action1" type="Button" parent="HUD"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -464.0
margin_top = 192.0
margin_right = -364.0
margin_bottom = 212.0
rect_scale = Vector2( 4, 4 )
text = "Spawn unit"

[node name="Action2" type="Button" parent="HUD"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -464.0
margin_top = 320.0
margin_right = -364.0
margin_bottom = 340.0
rect_scale = Vector2( 4, 4 )
text = "Job: dig"

[node name="Scaler" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Map" type="Sprite" parent="Scaler"]
unique_name_in_owner = true
centered = false

[node name="Collision" type="Sprite" parent="Scaler"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.427451 )
centered = false

[node name="MusicAudioPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = "Music"

[node name="SoundAudioPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = "Sounds"
